# SoACode-Public

./: .gitattributes  .gitignore  .gitmodules  .mailmap  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  SOA.sln  VorbCopy.bat  appveyor.yml  build.bat  build.sh  jenkins.py
ModTest/: ModTest.vcxproj  main.cpp
OOLua/: OOLua.vcxproj  OOLua.vcxproj.filters
ProjectConverter/: App.Designer.cs  App.cs  App.resx  ProjectConverter.csproj  ProjectConverter.sln
ProjectConverter/Properties/: AssemblyInfo.cs
SoA/: .GamePlayScreen.cpp.BASE.20388.cpp.swp  .GamePlayScreen.cpp.LOCAL.20388.cpp.swp  .GamePlayScreen.cpp.REMOTE.20388.cpp.swp  .GamePlayScreen.cpp.swp  AABBCollidableComponentUpdater.cpp  AABBCollidableComponentUpdater.h  ARProcessor.cpp  ARProcessor.h  AabbCollidableComponent.h  Actor.cpp  Actor.h  AmbienceLibrary.cpp  AmbienceLibrary.h  AmbiencePlayer.cpp  AmbiencePlayer.h  AmbienceStream.cpp  AmbienceStream.h  Animation.h  App.cpp  App.h  Atmosphere.cpp  Atmosphere.h  AtmosphereComponent.cpp  AtmosphereComponent.h  AtmosphereComponentRenderer.cpp  AtmosphereComponentRenderer.h  AwesomiumAPI.cpp  AwesomiumAPI.h  AwesomiumInterface.cpp  AwesomiumInterface.h  AwesomiumInterface.inl  AwesomiumRenderStage.cpp  AwesomiumRenderStage.h  AwesomiumUI.cpp  AwesomiumUI.h  AxisRotationComponent.cpp  AxisRotationComponent.h  AxisRotationComponentUpdater.cpp  AxisRotationComponentUpdater.h  Biome.cpp  (+750 more)
SoA/Resources/: resources.rc
TestBed/: HSLScreen.cpp  HSLScreen.h  TestApp.cpp  TestApp.h  TestBed.vcxproj  TestBed.vcxproj.filters  main.cpp
UnitTester/: Program.cs  UnitTester.csproj  UnitTester.vcxproj  main.cpp
UnitTester/Properties/: AssemblyInfo.cs
UnitTests/: AssemblyInfo.cpp  Example.cpp  Example.inl  Lua.cpp  OS.cpp  ReadMe.txt  Stdafx.cpp  Stdafx.h  Tests.cpp  Tests.h  Types.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters  Utils.cpp  VorbCoreECS.cpp  VorbIO.cpp  compat.h  macros.h  stdafx.h
Vorb/: AwesomiumInterface.h  AwesomiumInterface.inl  ComponentTableBase.cpp  ComponentTableBase.h  ECS.h  Events.hpp  FixedSizeArrayRecycler.hpp  GLProgram.h  GameWindow.h  GpuMemory.h  GraphicsDevice.cpp  IDGenerator.h  ImageLoader.cpp  ImageSaver.h  MainGame.cpp  MainGame.h  OpenglSurfaceFactory.cpp  PtrRecycler.h  RasterizerState.h  SamplerState.h  ScreenList.cpp  ScreenList.h  SpriteBatch.cpp  SpriteBatch.h  SpriteFont.cpp  Texture.h  ThreadPool.cpp  ThreadPool.h  Timing.h  Vorb.h  Vorb.vcxproj  Vorb.vcxproj.filters  colors.h  lodepng.cpp  lodepng.h  types.h
cmake/: CreateLaunchers.cmake
cmake/hunter/: cache.cmake  passwords.cmake
utils/git-hooks/: commit-msg  commit-msg_check-spelling  pep8.py  pre-commit  pre-commit_check-commit-message-spelling  pre-commit_check-for-cpp-style  pre-commit_check-for-pdb  pre-commit_check-spelling  pre-commit_convert-xml  pre-commit_pep8  pre-commit_pretty-xml  pre-commit_strip-eol-spaces  pre-commit_tabs-to-spaces  pre-receive
utils/git-hooks/cpplint/: cpplint.py
